# claude-code-tracker

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/claude_code_tracker/: proxy.py  reporter.py  utils.py
src/claude_code_tracker/static/: app.js  index.html  styles.css
