[project]
name = "claude-code-tracker"
version = "0.1.0"
description = "A forward proxy for Claude Code that tracks and visualizes AI interactions"
authors = [
    { name = "Mywifi", email = "contact@example.com" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
claude-tracker = "claude_code_tracker.proxy:main"
claude-reporter = "claude_code_tracker.reporter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_tracker"]
